--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.0",
     "express": "^4.16.2",
+    "http-proxy-middleware": "^0.17.4",
     "path": "^0.12.7",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
